@@ -103,17 +103,18 @@ void DeepZoom::run( Session* session, const std::string& argument ){
     }
 
     char str[1024];
-    snprintf( str, 1024, "Content-Type: application/xml\r\n"
-	      "Cache-Control: max-age=604800\r\n"
-	      "Last-Modified: Sat, 01 Jan 2000 00:00:00 GMT\r\n"
-	      "Etag: DeepZoom.dzi\r\n"
+    snprintf( str, 1024,
+	      "Server: iipsrv/%s\r\n"
+	      "Content-Type: application/xml\r\n"
+	      "Cache-Control: max-age=%d\r\n"
+	      "Last-Modified: %s\r\n"
 	      "\r\n"
 	      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\r\n"
 	      "<Image xmlns=\"http://schemas.microsoft.com/deepzoom/2008\"\r\n"
 	      "TileSize=\"%d\" Overlap=\"0\" Format=\"jpg\">"
 	      "<Size Width=\"%d\" Height=\"%d\"/>"
 	      "</Image>",
-	      tw, width, height );
+	      VERSION, MAX_AGE, (*session->image)->getTimestamp().c_str(), tw, width, height );
 
     session->out->printf( (const char*) str );
     session->out->printf( "\r\n" );
@@ -250,12 +251,14 @@ void DeepZoom::run( Session* session, const std::string& argument ){
 
 #ifndef DEBUG
   char str[1024];
-  snprintf( str, 1024, "Content-Type: image/jpeg\r\n"
+  snprintf( str, 1024,
+	    "Server: iipsrv/%s\r\n"
+	    "Content-Type: image/jpeg\r\n"
             "Content-Length: %d\r\n"
-	    "Cache-Control: max-age=604800\r\n"
-	    "Last-Modified: Sat, 01 Jan 2000 00:00:00 GMT\r\n"
-	    "Etag: deepzoom.jpg\r\n"
-	    "\r\n", len );
+	    "Cache-Control: max-age=%d\r\n"
+	    "Last-Modified: %s\r\n"
+	    "\r\n",
+	    VERSION, len, MAX_AGE, (*session->image)->getTimestamp().c_str() );
 
   session->out->printf( (const char*) str );
 #endif
