@@ -27,9 +27,7 @@
 #include <string>
 #include <cstdlib>
 
-#ifndef HAVE_TIME_H
-typedef unsigned long int time_t;
-#endif
+
 
 /// Colour spaces - GREYSCALE, sRGB and CIELAB
 enum ColourSpaces { GREYSCALE, sRGB, CIELAB };
