@@ -109,11 +109,16 @@ void TIL::run( Session* session, const std::string& a ){
   /* Only send our MIME type once
    */
   if( (endx >= startx) && (endy >= starty) ){
-    session->out->printf( "Content-type: application/vnd.netfpx\r\n"
-			  "Cache-Control: max-age=604800\r\n"
-			  "Last-Modified: Sat, 01 Jan 2000 00:00:00 GMT\r\n"
-			  "Etag: jtl\r\n"
-			  "\r\n" );
+    char str[1024];
+    snprintf( str, 1024,
+	      "Server: iipsrv/%s\r\n"
+	      "Content-Type: application/vnd.netfpx\r\n"
+	      "Cache-Control: max-age=%d\r\n"
+	      "Last-Modified: %s\r\n"
+	      "\r\n",
+	      VERSION, MAX_AGE, (*session->image)->getTimestamp().c_str() );
+
+    session->out->printf( (const char*)str );
   }
 
 
